k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  replicas: 1
  selector:
    # specify the label of the template to use
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim  # defined in pv-claim config file
      containers:
        - name: postgres
          image: postgres:10.5
          ports:
            # expose container's port 
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage  # defined in the volumes section above
              mountPath: /var/lib/postgresql/data
              subPath: postgres   # files in the volume will be nested in this dir
          # set database password (overriding default)
