k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy
spec:
  replicas: 3
  selector:
    # specify the label of the template to use
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: stan56/multi-server
          ports:
            # expose container's port 3000
            - containerPort: 5000
