k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
spec:
  replicas: 1
  selector:
    # specify the label of the template to use
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: stan56/multi-worker
