k8s/client-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name:  client-cluster-ip
spec:
  type:  ClusterIP
  selector:
    # specify the label of the object to forwards traffic to
    component:  web
  ports:
    - port: 3000          # exposed to other pods/objects
      targetPort: 3000    # container's exposed port
