k8s/postgres-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name:  postgres-cluster-ip
spec:
  type:  ClusterIP
  selector:
    # specify the label of the object to forwards traffic to
    component:  postgres
  ports:
    - port: 5432          # exposed to other pods/objects
      targetPort: 5432    # container's exposed port
