k8s/ingress.yml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip
              servicePort: 5000

## refer to ingress installation guide:
## https://kubernetes.github.io/ingress-nginx/deploy/#provider-specific-steps
